Closed Bug 505400 Opened 15 years ago Closed 15 years ago

Assertion failure: !full()[@CharSet::disjoint]

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: luke)

References

()

Details

(Keywords: assertion, regression, testcase)

Attachments

(1 file)

Assertion failure: !full(), at /Users/jruderman/central/js/src/jsregexp.cpp:2086

At least three sites trigger this assertion:
http://www.pps.org/
http://www.childrenandnature.org/
http://jumpingbeansoftware.com/

This assertion is part of new code added in the patch for bug 406271.
Attached patch fixSplinter Review
Oh gosh, that is a lame error on my part.  The recursion used to be a loop guarded by "!full()"; when I changed it I left out this condition.

In the pach, I changed addChar to return a failure code to act more like normal functions that can OOM.
Assignee: general → lw
Status: NEW → ASSIGNED
Attachment #389626 - Flags: review?(dmandelin)
Comment on attachment 389626 [details] [diff] [review]
fix

Unsolicited fly-by + ;)
Attachment #389626 - Flags: review?(dmandelin)
Attachment #389626 - Flags: review+
Attachment #389626 - Flags: review+ → review?(dmandelin)
Like a phantom in the night...
A test regexp is anything with a large number of possible next-characters so:

r = /(?:a|b|c|d|e|f|g|h|i|j|k|l)m/;
r.test("am")
Attachment #389626 - Flags: review?(dmandelin) → review+
Pushed to TM as:

changeset:   30379:e9088b89fe97
tag:         tip
user:        Luke Wagner <lw@mozilla.com>
date:        Tue Jul 21 15:19:40 2009 -0700
summary:     Bug 505400: restore fullness check for regexp character set, r=dmandelin,gal
This bug is biting nightly testers a fair bit (see duplicates and mozillazine forums[1][2]).

Can the patch be merged to central before the next nightly please?

[1] http://forums.mozillazine.org/viewtopic.php?f=23&t=1374845
[2] http://forums.mozillazine.org/viewtopic.php?f=23&t=1372575
dup bugs are on windows

OS -> ALL
OS: Mac OS X → All
Summary: Assertion failure: !full() → Assertion failure: !full()[@CharSet::disjoint]
http://hg.mozilla.org/mozilla-central/rev/e9088b89fe97
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090726 Minefield/3.6a1pre ID:20090726044003

Thank you!

Verified fixed using nightly build - no crash on websites from comment 0, testcase from comment 4 or websites from duplicates.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: