Bug 505400: restore fullness check for regexp character set, r=dmandelin,gal